src/test/ui/on-unimplemented/multiple-impls.stderr
error[E0277]: the trait bound `[i32]: Index<u32>` is not satisfied
  --> $DIR/multiple-impls.rs:43:5
   |
43 |     Index::index(&[] as &[i32], 2u32);
   |     ^^^^^^^^^^^^ trait message
   |
   = help: the trait `Index<u32>` is not implemented for `[i32]`
   = note: required by `Index::index`

error[E0277]: the trait bound `[i32]: Index<u32>` is not satisfied
  --> $DIR/multiple-impls.rs:43:5
   |
43 |     Index::index(&[] as &[i32], 2u32);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ trait message
   |
   = help: the trait `Index<u32>` is not implemented for `[i32]`

error[E0277]: the trait bound `[i32]: Index<Foo<u32>>` is not satisfied
  --> $DIR/multiple-impls.rs:49:5
   |
49 |     Index::index(&[] as &[i32], Foo(2u32));
   |     ^^^^^^^^^^^^ on impl for Foo
   |
   = help: the trait `Index<Foo<u32>>` is not implemented for `[i32]`
   = note: required by `Index::index`

error[E0277]: the trait bound `[i32]: Index<Foo<u32>>` is not satisfied
  --> $DIR/multiple-impls.rs:49:5
   |
49 |     Index::index(&[] as &[i32], Foo(2u32));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ on impl for Foo
   |
   = help: the trait `Index<Foo<u32>>` is not implemented for `[i32]`

error[E0277]: the trait bound `[i32]: Index<Bar<u32>>` is not satisfied
  --> $DIR/multiple-impls.rs:55:5
   |
55 |     Index::index(&[] as &[i32], Bar(2u32));
   |     ^^^^^^^^^^^^ on impl for Bar
   |
   = help: the trait `Index<Bar<u32>>` is not implemented for `[i32]`
   = note: required by `Index::index`

error[E0277]: the trait bound `[i32]: Index<Bar<u32>>` is not satisfied
  --> $DIR/multiple-impls.rs:55:5
   |
55 |     Index::index(&[] as &[i32], Bar(2u32));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ on impl for Bar
   |
   = help: the trait `Index<Bar<u32>>` is not implemented for `[i32]`

error: aborting due to 6 previous errors

